wp cli config added, envioremnet variables implemented

--- a/srcs/.env
+++ b/srcs/.env
@@ -3,3 +3,12 @@ DB_USER=jsiller
 DB_PASSWORD=password
 DB_HOST=mariadb
 
+WP_TITLE=jsillers-inception
+WP_ADMIN_USER=jsiller
+WP_ADMIN_PASSWORD=password
+WP_ADMIN_MAIL=jsiller@student.42heilbronn.de
+
+WP_USER=someone
+WP_USER_MAIL=someone@student.42heilbronn.de
+WP_USER_PASSWORD=password
+WP_URL=https://10.11.250.121
