--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -60,3 +60,11 @@ services:
                   - DB_USER=$DB_USER
                   - DB_PASSWORD=$DB_PASSWORD
                   - DB_HOST=$DB_HOST
+                  - WP_TITLE=$WP_TITLE
+                  - WP_ADMIN_USER=$WP_ADMIN_USER
+                  - WP_ADMIN_PASSWORD=$WP_ADMIN_PASSWORD
+                  - WP_ADMIN_MAIL=$WP_ADMIN_MAIL
+                  - WP_USER=$WP_USER
+                  - WP_USER_MAIL=$WP_USER_MAIL
+                  - WP_USER_PASSWORD=$WP_USER_PASSWORD
+                  - WP_URL=$WP_URL
