--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -68,3 +68,10 @@ services:
                   - WP_USER_MAIL=$WP_USER_MAIL
                   - WP_USER_PASSWORD=$WP_USER_PASSWORD
                   - WP_URL=$WP_URL
+        webpage:
+                container_name: webpage_debian
+                build: ./bonus/webpage
+                image: webpage
+                networks:
+                      - localhost
+                restart: always
