--- a/srcs/requirements/nginx/default.conf
+++ b/srcs/requirements/nginx/default.conf
@@ -7,7 +7,17 @@ server {
     ssl_certificate /etc/ssl/certs/nginx.crt;
     ssl_protocols TLSv1.2 TLSv1.3;
 
-
+	location ~ /adminer {
+		location ~ [^/]\.php(/|$) {
+			try_files $uri =404;
+			fastcgi_pass adminer:8000;
+			fastcgi_split_path_info ^(.+\.php)(/.+)$;
+			fastcgi_index index.php;
+			include fastcgi_params;
+			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+			fastcgi_param PATH_INFO $fastcgi_path_info;
+		}
+	}
 	location ~ (/index.html|/app.js|/main.css) {
 		proxy_pass http://webpage:4000;
 	}
