ssl fix and env in sql used

--- a/srcs/requirements/nginx/dockerfile
+++ b/srcs/requirements/nginx/dockerfile
@@ -3,7 +3,7 @@ FROM debian:buster
 RUN apt-get update
 RUN apt-get install nginx -y
 RUN apt-get install openssl -y
-RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/nginx.key -out /etc/ssl/certs/nginx.crt -subj "/C=RU/ST=Moscow/L=Moscow/O=DVSGroup/OU=SavchenkoDV/CN=https:\/\/github.com\/SavchenkoDV/emailAddress=dvs.rocket@gmail.com"
+RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/nginx.key -out /etc/ssl/certs/nginx.crt -subj "/C=DE/ST=Baden-Wuerrtemberg/L=Heilbronn/O=DVSGroup/OU=42Heilbronn/CN=10.11.250.121/emailAddress=jsiller@student.42heilbronn.de"
 COPY ./default.conf /etc/nginx/sites-enabled/default
 
 CMD ["nginx", "-g", "daemon off;"]
